force-app/main/default/objects/Compliance_Images__c/Compliance_Images__c.object-meta.xml
<CustomObject>
    <description>Used for COA, Primary and Information Panel Upload for Downloading or auto attachment to Buy Sell objects.</description>
    <label>Compliance Image</label>
    <nameField>
        <displayFormat>CI-{YYYY}-{MM}-{00000}</displayFormat>
        <label>Compliance Images</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>