force-app/main/default/objects/Compliance_Images__c/fields/Alpha_Bisabolol__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Bisabolol__c</fullName>
    <label>Alpha Bisabolol (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>