force-app/main/default/objects/Compliance_Images__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <inlineHelpText>Often referred to as Harvest Batch, Batch ID, Lot Code.</inlineHelpText>
    <label>Del_Batch ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>