force-app/main/default/objects/Compliance_Images__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>