force-app/main/default/objects/Compliance_Images__c/fields/Batch_Size_UOM__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_UOM__c</fullName>
    <label>Batch Size UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stocking_UOM</valueSetName>
    </valueSet>
</CustomField>