force-app/main/default/objects/Compliance_Images__c/fields/Beta_Pinene__c.field-meta.xml
<CustomField>
    <fullName>Beta_Pinene__c</fullName>
    <label>Beta-Pinene (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>