force-app/main/default/objects/Compliance_Images__c/fields/Borneol__c.field-meta.xml
<CustomField>
    <fullName>Borneol__c</fullName>
    <label>Borneol (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>