force-app/main/default/objects/Compliance_Images__c/fields/Brand_Test_Confirmaton__c.field-meta.xml
<CustomField>
    <fullName>Brand_Test_Confirmaton__c</fullName>
    <inlineHelpText>Date email sent to Brand for testing confirmation</inlineHelpText>
    <label>Brand Test Confirmaton</label>
    <type>Date</type>
</CustomField>