force-app/main/default/objects/Compliance_Images__c/fields/Brand_Test_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Brand_Test_Request_Date__c</fullName>
    <inlineHelpText>Date in which Brand has requested to to initiate Lab Sampling</inlineHelpText>
    <label>Brand Test Request Date</label>
    <type>Date</type>
</CustomField>