force-app/main/default/objects/Compliance_Images__c/fields/Camphene__c.field-meta.xml
<CustomField>
    <fullName>Camphene__c</fullName>
    <label>Camphene (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>