force-app/main/default/objects/Compliance_Images__c/fields/Caryophyllene__c.field-meta.xml
<CustomField>
    <fullName>Caryophyllene__c</fullName>
    <label>Caryophyllene (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>