force-app/main/default/objects/Compliance_Images__c/fields/COA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>COA_Expiration_Date__c</fullName>
    <formula>COA_Issued_Date__c + 365</formula>
    <label>COA Expiration Date</label>
    <type>Date</type>
</CustomField>