force-app/main/default/objects/Compliance_Images__c/fields/COA_Number__c.field-meta.xml
<CustomField>
    <fullName>COA_Number__c</fullName>
    <inlineHelpText>Certificate of Analysis Number, often referred as Sample ID Number.</inlineHelpText>
    <label>COA Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>