force-app/main/default/objects/Compliance_Images__c/fields/Delta_3_Carene__c.field-meta.xml
<CustomField>
    <fullName>Delta_3_Carene__c</fullName>
    <label>Delta 3 Carene (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>