force-app/main/default/objects/Compliance_Images__c/fields/Eucalyptol__c.field-meta.xml
<CustomField>
    <fullName>Eucalyptol__c</fullName>
    <label>Eucalyptol (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>