force-app/main/default/objects/Compliance_Images__c/fields/Harvest_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Compliance Images</relationshipLabel>
    <relationshipName>Compliance_Images</relationshipName>
    <type>Lookup</type>
</CustomField>