force-app/main/default/objects/Compliance_Images__c/fields/Lab_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Lab_Request_Date__c</fullName>
    <inlineHelpText>Date which email was sent to Lab</inlineHelpText>
    <label>Lab Request Date</label>
    <type>Date</type>
</CustomField>