force-app/main/default/objects/Compliance_Images__c/fields/Laboratory_Name__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laboratory Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Images (Laboratory Name)</relationshipLabel>
    <relationshipName>Compliance_Images1</relationshipName>
    <type>Lookup</type>
</CustomField>