force-app/main/default/objects/Compliance_Images__c/fields/Limonene__c.field-meta.xml
<CustomField>
    <fullName>Limonene__c</fullName>
    <label>Limonene (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>