force-app/main/default/objects/Compliance_Images__c/fields/Linalool__c.field-meta.xml
<CustomField>
    <fullName>Linalool__c</fullName>
    <label>Linalool (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>