force-app/main/default/objects/Compliance_Images__c/fields/Myrcene__c.field-meta.xml
<CustomField>
    <fullName>Myrcene__c</fullName>
    <label>Myrcene (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>