force-app/main/default/objects/Compliance_Images__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Images</relationshipLabel>
    <relationshipName>Compliance_Images</relationshipName>
    <type>Lookup</type>
</CustomField>