force-app/main/default/objects/Compliance_Images__c/fields/Producer_State_License__c.field-meta.xml
<CustomField>
    <fullName>Producer_State_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer State License</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>State_Licenses__c.License_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Producer_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Compliance Images</relationshipLabel>
    <relationshipName>Compliance_Images</relationshipName>
    <type>Lookup</type>
</CustomField>