force-app/main/default/objects/Compliance_Images__c/fields/Producer_State_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Producer_State_License_Number__c</fullName>
    <formula>Producer_State_License__r.License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer State License Number</label>
    <type>Text</type>
</CustomField>