force-app/main/default/objects/Compliance_Images__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Compliance Images</relationshipLabel>
    <relationshipName>Compliance_Images</relationshipName>
    <type>Lookup</type>
</CustomField>