force-app/main/default/objects/Compliance_Images__c/fields/Record_Edited_Time_Minus_30__c.field-meta.xml
<CustomField>
    <fullName>Record_Edited_Time_Minus_30__c</fullName>
    <formula>LastModifiedDate - 30 * 0.00069</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Edited Time Minus 30</label>
    <type>DateTime</type>
</CustomField>