force-app/main/default/objects/Compliance_Images__c/fields/Required_Testing__c.field-meta.xml
<CustomField>
    <fullName>Required_Testing__c</fullName>
    <inlineHelpText>Select application state mandated testing such as Phase 1, Phase 2, Phase 3</inlineHelpText>
    <label>Required Testing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Test_Types</valueSetName>
    </valueSet>
</CustomField>