force-app/main/default/objects/Compliance_Images__c/fields/Sample_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collection_Date__c</fullName>
    <label>Sample Collection Date</label>
    <type>Date</type>
</CustomField>