force-app/main/default/objects/Compliance_Images__c/fields/Sample_Size__c.field-meta.xml
<CustomField>
    <fullName>Sample_Size__c</fullName>
    <label>Sample Size</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>