force-app/main/default/objects/Compliance_Images__c/fields/Terpene_MG_G__c.field-meta.xml
<CustomField>
    <fullName>Terpene_MG_G__c</fullName>
    <label>Terpene (MG/G)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>