force-app/main/default/objects/Compliance_Images__c/fields/Terpineol__c.field-meta.xml
<CustomField>
    <fullName>Terpineol__c</fullName>
    <label>Terpineol (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>