force-app/main/default/objects/Compliance_Images__c/fields/Total_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory__c</fullName>
    <formula>Product__r.Total_Inventory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>