force-app/main/default/objects/Compliance_Images__c/fields/UID_New__c.field-meta.xml
<CustomField>
    <fullName>UID_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UID</label>
    <referenceTo>UID__c</referenceTo>
    <relationshipLabel>Compliance Images</relationshipLabel>
    <relationshipName>Compliance_Images</relationshipName>
    <type>Lookup</type>
</CustomField>