force-app/main/default/objects/Compliance_Images__c/listViews/X3_Expiring_COA_30.listView-meta.xml
<ListView>
    <fullName>X3_Expiring_COA_30</fullName>
    <columns>NAME</columns>
    <columns>Harvest_Batch_Code__c</columns>
    <columns>Lab_Test_Status__c</columns>
    <columns>COA_Number__c</columns>
    <columns>COA_Issued_Date__c</columns>
    <columns>COA_Expiration_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Producer_Name__c</columns>
    <columns>THC__c</columns>
    <columns>THC_MG_G__c</columns>
    <columns>CBD__c</columns>
    <columns>CBD_MG_G__c</columns>
    <columns>Terpene__c</columns>
    <columns>Terpene_MG_G__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COA_Expiration_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>COA_Expiration_Date__c</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>3. Expiring COA &lt;30</label>
</ListView>